2003-11-26  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/boxtype.c: squash warning about uninitialized data.

2003-11-24  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/sp_menu.c (emit_menu_header): output properly initialized
	C-code.

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Makefile.am: enable the conditional building of the demo
	GL codes.

	* demos/gl.c:
	* demos/glwin.c: #include gl/glcanvas.h and so prevent warnings
	about implicit function declarations.

2003-11-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/local.h: do not define HAVE_KP_DEFINE

	* lib/flinternal.h: test directly for X11 version here

	* lib/forms.c (fl_keyboard): 
	* lib/flcolor.c (fl_mapcolor, fl_dump_state_info): 
	* lib/xpopup.c (fl_addtopup): 
	* lib/clock.c (draw_clock): use proper ML_xxx macros instead of
	bogus names

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/events.c:
	* lib/fldraw.c:
	* lib/forms.c:
	* lib/xpopup.c:
	* lib/xsupport.c:

	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jpeg.c:
	* image/image_replace.c:
	* image/image_tiff.c:
	* image/ps_core.c:
	* image/ps_draw.c:

	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jpeg.c:
	* image/image_replace.c:
	* image/image_tiff.c:
	* image/image_xwd.c:
	* image/ps_core.c:
	* image/ps_draw.c:

	* fdesign/fd_main.c: squash warnings about comparison of
	signed and unsigned variables. Only 'safe' warnings have been squashed.
	
2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/flsnprintf.c: remove unused variable 'credits'.

	* lib/flresource.c: remove line 'fl_context->xim;' as it is a
	statement with no effect.

	* lib/version.c: remove unused variable 'c'.

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/flinternal.h: add declaration of fl_handle_form.
	Squash warnings about implicit declaration of the function when
	compiling lib/tabfolder.c.
